--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
+  width: 100%;
   z-index: 999;
   box-shadow: 2px 0 5px rgba(0,0,0,0.2);
   display: flex;
